kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scotmurphy-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: www.scotmurphy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: resume-service
          servicePort: 80
      - path: /api/
        backend:
            serviceName: testing-api-service
            servicePort: 80
  - host: scotmurphy.com
    http:
      paths:
      - path: /
        backend:
          serviceName: resume-service
          servicePort: 80
      - path: /api/
        backend:
            serviceName: testing-api-service
            servicePort: 80
